unpackaged/main/default/objects/NPS_Summary__c/NPS_Summary__c.object-meta.xml
<CustomObject>
    <description>Aggregate data for any survey that collects/calculates Net Promoter Score values.</description>
    <label>NPS Summary</label>
    <nameField>
        <displayFormat>NPS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>