unpackaged/main/default/objects/NPS_Summary__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>NPS Summaries</relationshipLabel>
    <relationshipName>NPS_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>