unpackaged/main/default/objects/NPS_Summary__c/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>NPS Summaries</relationshipLabel>
    <relationshipName>NPS_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>