unpackaged/main/default/objects/NPS_Summary__c/fields/Mod_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Mod_Instructor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Moderator or Instructor leading the group or class.</description>
    <inlineHelpText>The Moderator or Instructor leading the group or class.</inlineHelpText>
    <label>Mod/Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPS Summaries</relationshipLabel>
    <relationshipName>NPS_Summaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>