unpackaged/main/default/objects/NPS_Summary__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <description>The numeric NPS score from the survey (typically a scale from 1-10)</description>
    <inlineHelpText>The numeric NPS score from the survey (typically a scale from 1-10)</inlineHelpText>
    <label>NPS Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>