unpackaged/main/default/objects/NPS_Summary__c/fields/NPS_Value__c.field-meta.xml
<CustomField>
    <fullName>NPS_Value__c</fullName>
    <label>NPS Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>