unpackaged/main/default/objects/NPS_Summary__c/fields/Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Group</label>
    <referenceTo>Proprietary_Group__c</referenceTo>
    <relationshipLabel>NPS Summaries</relationshipLabel>
    <relationshipName>NPS_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>