unpackaged/main/default/objects/NPS_Summary__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>The date the survey was completed by the customer.</description>
    <inlineHelpText>The date the survey was completed by the customer.</inlineHelpText>
    <label>Response Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>