unpackaged/main/default/objects/NPS_Summary__c/fields/Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Id__c</fullName>
    <description>The source record Id of the survey result (either GetFeedback_Results__c or Engagement_Survey__c records) where this summary was generated from.</description>
    <inlineHelpText>The source record Id of the survey result (either GetFeedback_Results__c or Engagement_Survey__c records) where this summary was generated from..</inlineHelpText>
    <label>Survey Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>