unpackaged/main/default/objects/NPS_Summary__c/fields/X20_Group__c.field-meta.xml
<CustomField>
    <fullName>X20_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The 20 Group the survey belongs to (Retail Solutions only)</description>
    <inlineHelpText>The 20 Group the survey belongs to (Retail Solutions only)</inlineHelpText>
    <label>20 Group</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>NPS Summaries</relationshipLabel>
    <relationshipName>NPS_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>