unpackaged/main/default/objects/NPS_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Engagement_Attendee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>NPS-002582,NPS-002583,NPS-002584,NPS-002586</value>
    </filters>
    <label>All</label>
</ListView>